Начал руководство администратора. Подраздел расположения серверов и shared-хостинга. Добавил DDoS-Deflate.

--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -273,7 +273,7 @@ namespaces --- пространства имен.
 К системам управления можно отнести Docker.
 
 Docker --- это программное обеспечение для автоматизации развертывания и управления приложениями в среде виртуализации на уровне операционной системы, например LXC.
-Docker позволяет <<упаковать>> приложение и все его окружение и зависимости в контейнер, который легко переносится на любой Linux-систему с поддержкой cgroups в ядре, а также предоставляет среду по управлению контейнерами.
+Docker позволяет <<упаковать>> приложение и все его окружение и зависимости в контейнер, который легко переносится на любую Linux-систему с поддержкой cgroups в ядре, а также предоставляет среду по управлению контейнерами.
 
 Идея Docker состоит в том, что производитель сам собирает программу со всеми необходимыми зависимостями и поставляет ее в виде контейнера, работающего на платформе Docker, все что останется, это скачать контейнер и запустить его, а впоследствии обновлять.
 
