--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,7 +1,17 @@
-\anonsection{Приложение А --- Первое приложение}
+\anonsection{Приложение А --- Исходный код программы DDoS-Deflate}
 
-Приложение предназначено для исполнение в среде текстовой консоли, которая обычно
-предоставляется эмулятором терминала. Для запуска необходимо знать
-сетевой адрес, на котором запущен сервер. Если это тот же компьютер,
+\lstinputlisting{inc/ddos-deflate/README.md}
+
+\lstinputlisting{inc/ddos-deflate/LICENSE}
+
+\lstinputlisting{inc/ddos-deflate/ddos.conf}
+
+\lstinputlisting{inc/ddos-deflate/ddos.sh}
+
+\lstinputlisting{inc/ddos-deflate/ignore.ip.list}
+
+\lstinputlisting{inc/ddos-deflate/install.sh}
+
+\lstinputlisting{inc/ddos-deflate/uninstall.sh}
 
 \clearpage
