Добавлен подраздел защиты от DDoS

--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,4 +1,4 @@
-\anonsection{Приложение А --- Исходный код программы DDoS-Deflate}
+\anonsection{Приложение А --- Исходный код скрипта DDoS-Deflate}
 
 \lstinputlisting{inc/ddos-deflate/README.md}
 
