--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \input{inc/0-bibliography} % Библиографический список
 
 % Приложения
-\input{inc/a-app} % DDoS-Deflate
+\input{inc/a-app} % DDoS Deflate
 
 %\includepdf{act} % Акт внедрения
 
