--- a/inc/5-adminguide.tex
+++ b/inc/5-adminguide.tex
@@ -579,7 +579,48 @@ bantime = 86400
 # fail2ban-client set ssh-iptables unbanip 10.0.0.111
 \end{lstlisting}
 
-\subsection{Второстепенные сервера}
+В виртуальных машинах пользователи зачастую склонны забывать пароль от MySQL.
+В данном случае существует простое решение проблемы.
+Остановка службы MySQL:
+\begin{lstlisting}
+# service mysql stop
+\end{lstlisting}
+
+Запуск службы с опцией -{}-skip-grant-tables:
+\begin{lstlisting}
+# mysqld_safe --skip-grant-tables &
+[1] 6518
+Starting mysqld daemon with databases from /var/lib/mysql
+mysqld_safe[5722]: started
+\end{lstlisting}
+
+Подключение с серверу MySQL при помощи клиента:
+\begin{lstlisting}
+# mysql -u root
+mysql>
+\end{lstlisting}
+
+Ввод нового пароля для root:
+\begin{lstlisting}
+mysql> use mysql;
+mysql> update user set password=PASSWORD("NEW-PASS") where User='root';
+mysql> flush privileges;
+mysql> quit
+\end{lstlisting}
+
+Остановка сервера MySQL:
+\begin{lstlisting}
+# service mysql stop
+\end{lstlisting}
+
+Запуск MySQL-сервера и вход с новым паролем:
+\begin{lstlisting}
+# service mysql start
+# mysql -u root -p
+Enter password: NEW-PASS
+\end{lstlisting}
+
+\subsection{Дополнительные виртуальные сервера}
 
 В качестве сервера мониторинга используется Nagios, для построения графиков --- Munin.
 Дополнительной настройки этих сервисов не требуется.
@@ -590,6 +631,28 @@ bantime = 86400
 В DNS серверах используется master-slave репликация, причем один из DNS-серверов, равно как и сервер мониторинга расположены в другом дата-центре для обеспечения отказоустойчивости системы.
 Также между slave-серверами настроена балансировка нагрузки.
 
+\subsection{Защита от DDoS-атак}
+
+Стоит незамедлительно реагировать на DDoS-атаки.
+При обнаружении подозрительного трафика следует убедиться, что это действительно DDoS, а также поинтересоваться у дата-центра реакцию сетевого оборудования на нее.
+Определить DDoS это или нет можно с помощью утилит netstat и iftop.
+
+Намеренную DDoS-атаку сложно остановить лишь с помощью программных средств, однако некоторые несложные скрипты позволяют отражать небольшие <<любительские>> атаки на отказ.
+Подобный скрипт блокировки DDoS-атак представлен в приложении А.
+Скрипт анализирует текущие подключения к серверу на основе утилиты netstat, в случае превышения определенного лимита подключений, адрес попадает в блок IPTables на некоторое время.
+
+Для блокировки намеренных атак требуется аппаратная защита на уровне сетевого оборудования.
+Защита от распределенных DDoS-атак основывается на мно­го­фак­тор­ном анализе трафика, который поступает на каждый защищаемый сервер.
+Во время нормальной работы система защиты может самообучаться или настраиваться, а после обнаружения атаки либо автоматически, либо по требованию, активно про­тиво­дей­ству­ет нелегитимному трафику.
+Эффективность защиты от DDoS-атак обычно описывается тремя основными параметрами:
+\begin{itemize}
+  \item мощность атаки (Мбит/с), которую способна выдержать система;
+  \item точность действий системы при обнаружении и отражении атаки;
+  \item вероятность и количество ложных срабатываний (False Positive).
+\end{itemize}
+
+В данном случае защитником выступает дата-центр, который имеет в распоряжении оборудование, способное осуществлять фильтрацию трафика и предотвращение атак на отказ.
+
 \subsection{Общие рекомендации по администрированию инфраструктуры}
 
 Следует следить за новостными рассылками о критических уязвимостях в операционной системе и используемом программном обеспечении.
@@ -599,76 +662,16 @@ bantime = 86400
 
 Важно следить за состоянием RAID на сервере, в случае сбоя одного из дисков, следует обратиться к поддержке дата-центра с просьбой о замене диска.
 
-Не следует просто так перезагружать сервер, рекомендуется это делать только в случаях если совсем ничего не помогает.
+Не следует просто так перезагружать сервер, рекомендуется это делать только в случаях чрезвычайной необходимости.
 
-Стоит незамедлительно реагировать на DDoS-атаки, при обнаружении подозрительного трафика следует убедиться, что это действительно DDoS, а также поинтересоваться у дата-центра реакцию сетевого оборудования на нее.
+Всегда стоит проверять наличие актуальных резервных копий, а также свободное место на системах хранения данных.
+Стоит также настроить ротацию логов, это позволит сэкономить место на диске.
 
-Всегда проверять наличие актуальных резервных копий, свободного места на жестких дисках.
-Стоит также настроить ротацию логов, чтобы не занималось лишнее место на сервере.
-
-На физических нодах стоит устанавливать только самый необходимый минимальный набор программного обеспечения, для уменьшения вероятности компрометации сервера.
+На физических нодах стоит устанавливать только самый необходимый, минимальный набор программного обеспечения, для уменьшения вероятности компрометации сервера.
 
 Всегда стоит вести документацию в том или ином виде и логировать свои действия на сервере.
 
-В случае обнаружения неполадок с аппаратной частью, стоит незамедлительно обратиться к своему провайдеру для проверки работоспособности аппаратуры.
+В случае обнаружения неполадок с аппаратной частью, стоит незамедлительно обратиться к провайдеру для проверки работоспособности аппаратуры.
 В случае недочетов в программном обеспечении стоит обратиться к технической поддержке ПО.
-
-Быстрое удаление правила iptables по его номеру.
-Вывод правил цепочки INPUT с указанием номеров:
-\begin{lstlisting}
-# iptables -L INPUT --line-numbers
-Chain INPUT (policy ACCEPT)
-num  target     prot opt source               destination
-1    DROP       tcp  --  anywhere             anywhere             tcp dpt:http STRING match  "/forbot" ALGO name kmp TO 65535
-2    DROP       tcp  --  anywhere             anywhere             tcp dpt:http STRING match  "/tobot" ALGO name kmp TO 65535
-3    DROP       tcp  --  anywhere             anywhere             tcp dpt:http STRING match  "save" ALGO name kmp TO 65535
-\end{lstlisting}
-
-Удаление правила с указанным номером:
-\begin{lstlisting}
-# iptables -D INPUT num
-\end{lstlisting}
-
-
-Восстановление пароля MySQL.
-Останавливаем службу MySQL:
-\begin{lstlisting}
-# service mysql stop
-\end{lstlisting}
-
-Запускаем службу с опцией -{}-skip-grant-tables:
-\begin{lstlisting}
-# mysqld_safe --skip-grant-tables &
-[1] 6518
-Starting mysqld daemon with databases from /var/lib/mysql
-mysqld_safe[5722]: started
-\end{lstlisting}
-
-Подключаемся с серверу MySQL при помощи клиента mysql:
-\begin{lstlisting}
-# mysql -u root
-mysql>
-\end{lstlisting}
-
-Вводим новый пароль для root:
-\begin{lstlisting}
-mysql> use mysql;
-mysql> update user set password=PASSWORD("NEW-PASS") where User='root';
-mysql> flush privileges;
-mysql> quit
-\end{lstlisting}
-
-Останавливаем сервер MySQL:
-\begin{lstlisting}
-# service mysql stop
-\end{lstlisting}
-
-Запускаем MySQL-сервер и логинимся с новым паролем:
-\begin{lstlisting}
-# service mysql start
-# mysql -u root -p
-Enter password: NEW-PASS
-\end{lstlisting}
-
 
 \clearpage
