Поправил руководство администратора

--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,15 +1,15 @@
-\anonsection{Приложение А --- Исходный код скрипта DDoS-Deflate}
+\anonsection{Приложение А --- Исходный код скрипта DDoS Deflate}
 
-\lstinputlisting{inc/ddos-deflate/README.md}
+\lstinputlisting[numbers=left]{inc/ddos-deflate/README.md}
 
-\lstinputlisting{inc/ddos-deflate/ddos.conf}
+\lstinputlisting[numbers=left]{inc/ddos-deflate/ddos.conf}
 
-\lstinputlisting{inc/ddos-deflate/ddos.sh}
+\lstinputlisting[numbers=left]{inc/ddos-deflate/ddos.sh}
 
-\lstinputlisting{inc/ddos-deflate/ignore.ip.list}
+\lstinputlisting[numbers=left]{inc/ddos-deflate/ignore.ip.list}
 
-\lstinputlisting{inc/ddos-deflate/install.sh}
+\lstinputlisting[numbers=left]{inc/ddos-deflate/install.sh}
 
-\lstinputlisting{inc/ddos-deflate/uninstall.sh}
+\lstinputlisting[numbers=left]{inc/ddos-deflate/uninstall.sh}
 
 \clearpage
