--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -8,9 +8,13 @@
 \usepackage{listings} % Оформление исходного кода
 \lstset{
 basicstyle=\small\ttfamily,
-columns=flexible,
+columns=fullflexible,
+flexiblecolumns,
 breaklines=true,
-tabsize=2
+tabsize=2,
+inputencoding=utf8x,
+extendedchars=\true,
+keepspaces=true
 }
 
 % Шрифты, xelatex
