Добавил руководство пользователя

--- a/inc/6-userguide.tex
+++ b/inc/6-userguide.tex
@@ -1,3 +1,11 @@
 \section{Руководство пользователя}
 
+В руководстве администратора рассмотрен процесс заказа услуги пользователем, внешний интерфейс панелей управления.
+Панели биллинга, панели управления хостингом, контейнерами и виртуальными машинами имеют простой интуитивный интерфейс с возможностью тонкой настройки.
+
+Рассмотрен процесс подачи запроса в техническую поддержку.
+Для пользователя доступны ответы на самые часто задаваемые вопросы в разделе wiki.
+
+Руководство пользователя представлено в приложении Б.
+
 \clearpage
