--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 
 % Приложения
 \input{inc/a-app} % DDoS Deflate
+\input{inc/b-app} % Руководство пользователя
 
 %\includepdf{act} % Акт внедрения
 
