--- a/inc/7-testing.tex
+++ b/inc/7-testing.tex
@@ -1,3 +1,88 @@
 \section{Результаты тестирования}
 
+В режиме нормального функционирования мониторинг показывает полную работоспособность всех сервисов системы (рисунок \ref{nagios-ok}).
+\addimghere{nagios-ok}{1}{Работоспособность сервисов в штатном режиме}{nagios-ok}
+
+В случае появления внештатных ситуаций, система мониторинга фиксирует аномальные явления, такие как недоступность хостов или отдельных сервисов.
+Мониторинг способен запоминать код ошибки, поэтому диагностика неисправностей является несложной задачей.
+Пример реакции системного мониторинга на недоступность сервера представлен на рисунке \ref{nagios-nok}.
+\addimghere{nagios-nok}{1}{Недоступность некоторых серверов инфраструктуры}{nagios-nok}
+
+Пример реакции системы мониторинга Nagios на неисправность одного из дисков в RAID-массиве представлен на рисунке \ref{nagios-raid-error}.
+\addimghere{nagios-raid-error}{1}{Сбой работы диска в RAID-массиве}{nagios-raid-error}
+
+\subsection{Нагрузка сети во время резервного копирования}
+
+Ежедневно на серверах в ночное время запускается задача резервного копирования, в это время наблюдается повышенная нагрузка на сервере, связанная со снятием дампов баз данных, архивацией и сжатием архивов для передачи по сети на сервер резервного копирования.
+
+Как правило повышение нагрузки незначительное, что можно наблюдать на рисунке \ref{top-ok}.
+\addimghere{top-ok}{1}{Состояние системы во время процесса резервного копирования}{top-ok}
+
+На графике Munin можно наблюдать значительное повышение утилизации сетевого канала во время резервного копирования.
+График представлен на рисунке \ref{munin-backup}.
+Значения представленные на графике являются условными, сетевого канала в 10 Мб/с явно недостаточно для такой инфраструктуры.
+На деле используется сеть с пропускной способностью 100 Мб/с.
+\addimghere{munin-backup}{1}{Состояние системы во время процесса резервного копирования}{munin-backup}
+
+На графике представлено состояние канала сети за последний месяц, пиками на графике являются значения максимальной пропускной способности сети.
+
+\subsection{Состояние сервера в период атаки на отказ}
+
+Можно выделить три основных типа DDoS атак:
+\begin{itemize}
+  \item переполнение сетевого канала;
+  \item большое количество одновременных подключений (syn-flood);
+  \item исчерпание процессорных мощностей сервера (HTTP-flood).
+\end{itemize}
+
+От последних двух типов атак можно защищаться средствами операционной системы.
+В случае переполнения сетевого канала, решением проблемы является расширение сетевого канала.
+
+Состояние нагрузки системы во время DDoS-атаки можно пронаблюдать на рисунке \ref{munin-la}.
+\addimghere{munin-la}{1}{Значительное повышение нагрузки в период 0:00}{munin-la}
+
+В данный промежуток времени нагрузка составила 40 LA, что превышает среднюю нагрузку на используемом сервере в 20 раз.
+При этом, в процессах системы наблюдается явная нагрузка на сервер баз данных (рисунок \ref{htop-ddos}).
+\addimghere{htop-ddos}{1}{Все процессорные ядра заняты обработкой запросов}{htop-ddos}
+
+На графиках соединений с брандмауэром также наблюдается аномальное явление (рисунок \ref{munin-ddos}).
+\addimghere{munin-ddos}{1}{Превышено число соединений к брандмауэру в 40 раз}{munin-ddos}
+
+Если взглянуть на вывод команды netstat, то можно заметить наиболее активные адреса:
+\begin{lstlisting}
+# netstat -ntu | awk '{print $5}' | cut -d: -f1 | sort | uniq -c | sort -rn | grep -v 127.0.0.1 | head
+  22373 209.72.209.54
+  17766 88.81.32.224
+  16060 176.209.90.198
+  13226 217.209.214.248
+    221 62.163.78.143
+    221 188.255.255.177
+    220 198.27.82.153
+    118 216.242.148.101
+    113 95.216.88.50
+    111 216.73.216.251
+\end{lstlisting}
+
+\subsection{Отказ одного из DNS-серверов}
+
+Nagios зафиксировал недоступность одного из DNS-серверов, неспособного осуществлять обработку запросов (рисунок \ref{dns-nok}).
+\addimghere{dns-nok}{1}{Недоступность DNS-сервера}{munin-ddos}
+
+При этом все сайты доступны и работают в штатном режиме, так как отсутствие одного из трех серверов не влияет на работоспособность всей инфраструктуры.
+Один из подчиненных серверов все еще доступен и способен обрабатывать пользовательские DNS-запросы.
+\begin{lstlisting}
+$ host -t ns site.ru
+site.ru name server ns1.site.ru.
+\end{lstlisting}
+
+После возобновления работоспособности сервера, оба подчиненных сервера функционируют в штатном режиме:
+\begin{lstlisting}
+$ host -t ns site.ru
+site.ru name server ns1.site.ru.
+site.ru name server ns2.site.ru.
+\end{lstlisting}
+
+Таким образом, в ходе проектирования и тестирования инфраструктуры удалось реализовать отказоустойчивую систему, способную оперативно обнаруживать неисправности в инфраструктуре.
+Также немаловажным фактором является реакция команды системных администраторов и технической поддержки дата-центра, в условиях критических ситуация важно проявить особую внимательность в решении проблем.
+
 \clearpage
