--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -38,7 +38,7 @@ keepspaces=true
 
 % Пути к каталогам с изображениями
 \usepackage{graphicx} % Вставка картинок и дополнений
-\graphicspath{{images/}{images/userguide/}{extra/}}
+\graphicspath{{images/}{images/userguide/}{images/testing/}{extra/}}
 
 % Формат подрисуночных записей
 \usepackage{chngcntr}
