Удалил test.tex

--- a/inc/7-testing.tex
+++ b/inc/7-testing.tex
@@ -66,7 +66,7 @@
 \subsection{Отказ одного из DNS-серверов}
 
 Nagios зафиксировал недоступность одного из DNS-серверов, неспособного осуществлять обработку запросов (рисунок \ref{dns-nok}).
-\addimghere{dns-nok}{1}{Недоступность DNS-сервера}{munin-ddos}
+\addimghere{dns-nok}{1}{Недоступность DNS-сервера}{dns-nok}
 
 При этом все сайты доступны и работают в штатном режиме, так как отсутствие одного из трех серверов не влияет на работоспособность всей инфраструктуры.
 Один из подчиненных серверов все еще доступен и способен обрабатывать пользовательские DNS-запросы.
