--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -1,55 +1,33 @@
 \section{Описание виртуальной инфраструктуры}
 
-\iffalse 
-Пункты:?
-\begin{itemize}
-  \item Назначение
-  \item Системные требования, парк серверов
-  \item Технологии, ПО, библиотеки, скрипты
-  \item Алгоритмы (несколько, они довольно сложные) функционирования инфраструктуры 
-\end{itemize}
+\subsection{Схема взаимодействия пользователя с инфраструктурой}
 
-Ключевые слова:
-виртуализация,
-KVM,
-OpenVZ,
-выделенный сервер,
-VPS,
-мониторинг,
-nagios,
-munin,
-резервное копирование,
-полный/инкрементальный/дифференциальный бэкапы,
-репликация MySQL,
-репликация DNS,
-шардинг,
-CDN,
-балансировка нагрузки,
-типы репликации DNS и MySQL,
-DDoS и защита от него,
-LVM,
-RAID,
-панель управления,
-ISPmanager/Vesta/Plesk/cpanel/ajenti...,
-ISPsystem и его продукция,
-обоснование выбора OpenVZ и KVM,
-работа с ДЦ,
-лицензии на ПО и подсети IP с арендуемым железом,
-биллинг (платежная система),
-скрипты самопальные,
-свои конфиги,
-тестирование хостинг-панелей для клиентов,
-клиентская и админская документация,
-тарифы (услуги),
-миграция контейнеров и серверов,
-отказоустойчивость,
-расширение инфраструктуры
+Схема взаимодействия пользователя с инфраструктурой представлена на рисунке \ref{user-infrast-scheme}.
+\addimghere{user-infrast-scheme}{1}{Схема взаимодействия пользователя с инфраструктурой}{user-infrast-scheme}
 
-Ссылки: http://blog.selectel.ru/balansirovka-nagruzki-osnovnye-algoritmy-i-metody/
+\subsection{Общая схема инфраструктуры}
 
-Рисую в гугл драйве схемы.
-\fi 
+Общая схема инфраструктуры представлена на рисунке \ref{infrast-scheme}.
+\addimghere{infrast-scheme}{1}{Общая схема инфраструктуры}{infrast-scheme}
 
-\subsection{Назначение виртуальной инфраструктуры}
+\subsection{Схема мониторинга}
+
+Схема мониторинга инфраструктуры представлена на рисунке \ref{nagios-munin-scheme}.
+\addimghere{nagios-munin-scheme}{1}{Схема мониторинга инфраструктуры}{nagios-munin-scheme}
+
+\subsection{Схема репликации и балансировки нагрузки DNS-серверов}
+
+Схема репликации и балансировки нагрузки DNS-серверов представлена на рисунке \ref{dns-scheme}.
+\addimghere{dns-scheme}{1}{Схема репликации и балансировки нагрузки DNS-серверов}{dns-scheme}
+
+\subsection{Используемые технологии виртуализации}
+
+Схема взаимодействия виртуализации OpenVZ изображена на рисунке \ref{openvz-infrast-scheme}.
+\addimghere{openvz-infrast-scheme}{1}{Схема взаимодействия виртуализации OpenVZ}{openvz-infrast-scheme}
+
+Схема взаимодействия виртуализации KVM изображена на рисунке \ref{kvm-infrast-scheme}.
+\addimghere{kvm-infrast-scheme}{1}{Схема взаимодействия виртуализации KVM}{kvm-infrast-scheme}
+
+\subsection{Алгоритм функционирования инфраструктуры}
 
 \clearpage
